--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -137,25 +137,25 @@
                         <a href="#" class="dropdown-toggle" aria-haspopup="true" data-toggle="dropdown" data-hover="dropdown" data-href="${href}"><i class="fa fa-lg fa-cogs"></i> <span class="caret"></span></a>
                         <ul class="dropdown-menu" id="settings-dropdown-menu">
                             % if _session['user_group'] == 'admin':
-                            <li><a href="settings"><i class="fa fa-fw fa-cogs"></i> Settings</a></li>
+                            <li><a href="settings"><i class="fa fa-fw fa-cogs"></i> ${_('base.nav.settings')}</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="logs"><i class="fa fa-fw fa-list-alt"></i> View Logs</a></li>
+                            <li><a href="logs"><i class="fa fa-fw fa-list-alt"></i> ${_('base.nav.view_logs')}</a></li>
                             <li><a href="${anon_url('https://github.com/%s/%s/wiki/Frequently-Asked-Questions' % (plexpy.CONFIG.GIT_USER, plexpy.CONFIG.GIT_REPO))}" target="_blank" rel="noreferrer"><i class="fa fa-fw fa-question-circle"></i> FAQ</a></li>
-                            <li><a href="support"><i class="fa fa-fw fa-comment"></i> Support</a></li>
+                            <li><a href="support"><i class="fa fa-fw fa-comment"></i> ${_('base.nav.support')}</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#" data-target="#donate-modal" data-toggle="modal"><i class="fa fa-fw fa-heart"></i> Donate</a></li>
+                            <li><a href="#" data-target="#donate-modal" data-toggle="modal"><i class="fa fa-fw fa-heart"></i> ${_('base.nav.donate')}</a></li>
                             <li role="separator" class="divider"></li>
                             % if plexpy.CONFIG.CHECK_GITHUB:
-                            <li><a href="#" id="nav-update"><i class="fa fa-fw fa-arrow-alt-circle-up"></i> Check for Updates</a></li>
+                            <li><a href="#" id="nav-update"><i class="fa fa-fw fa-arrow-alt-circle-up"></i> ${_('base.nav.check_for_updates')}</a></li>
                             % endif
-                            <li><a href="#" id="nav-restart"><i class="fa fa-fw fa-refresh"></i> Restart</a></li>
-                            <li><a href="#" id="nav-shutdown"><i class="fa fa-fw fa-power-off"></i> Shutdown</a></li>
+                            <li><a href="#" id="nav-restart"><i class="fa fa-fw fa-refresh"></i> ${_('base.nav.restart')}</a></li>
+                            <li><a href="#" id="nav-shutdown"><i class="fa fa-fw fa-power-off"></i> ${_('base.nav.shutdown')}</a></li>
                             % else:
-                            <li><a href="#" data-target="#admin-login-modal" data-toggle="modal"><i class="fa fa-fw fa-lock"></i> Admin Login</a></li>
+                            <li><a href="#" data-target="#admin-login-modal" data-toggle="modal"><i class="fa fa-fw fa-lock"></i> ${_('base.nav.admin_login')}</a></li>
                             <li role="separator" class="divider"></li>
                             % endif
                             % if _session['exp']:
-                            <li><a href="${http_root}auth/logout"><i class="fa fa-fw fa-sign-out"></i> Sign Out</a></li>
+                            <li><a href="${http_root}auth/logout"><i class="fa fa-fw fa-sign-out"></i> ${_('base.nav.sign_out')}</a></li>
                             % endif
                         </ul>
                     </li>
