Add len function to notification expressions

--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -1929,6 +1929,7 @@ Rating: {rating}/10   --> Rating: /10
                             <li><span class="inline-pre">divmod(a, b)</span></li>
                             <li><span class="inline-pre">float(x)</span></li>
                             <li><span class="inline-pre">int(x)</span></li>
+                            <li><span class="inline-pre">len(s)</span></li>
                             <li><span class="inline-pre">round(n[, ndigits])</span></li>
                             <li><span class="inline-pre">str(x)</span></li>
                         </ul>
