--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -56,7 +56,7 @@
                 <li role="presentation"><a id="nav-tabs-newsletter_agents" href="#tabs-newsletter_agents" aria-controls="tabs-newsletter_agents" role="tab" data-toggle="tab">Newsletter Agents</a></li>
                 <li role="presentation"><a id="nav-tabs-3rd_party_apis" href="#tabs-3rd_party_apis" aria-controls="tabs-3rd_party_apis" role="tab" data-toggle="tab">3rd Party APIs</a></li>
                 <li role="presentation"><a id="nav-tabs-import_backups" href="#tabs-import_backups" aria-controls="tabs-import_backups" role="tab" data-toggle="tab">Import & Backups</a></li>
-                <li role="presentation"><a id="nav-tabs-remote_app" href="#tabs-remote_app" aria-controls="tabs-remote_app" role="tab" data-toggle="tab">Tautulli Remote App <sup><small>beta</small></sup></a></li>
+                <li role="presentation"><a id="nav-tabs-remote_app" href="#tabs-remote_app" aria-controls="tabs-remote_app" role="tab" data-toggle="tab">Tautulli Remote App</a></li>
             </ul>
         </div>
         <div class="col-md-9">
@@ -1560,14 +1560,22 @@
                             <p class="help-block">
                                 Get the Tautulli Remote app on
                                 <a href="${anon_url('https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote')}" target="_blank" rel="noreferrer">Google Play</a>
-                                to access Tautulli from your mobile device!<br />
+                                to access Tautulli from your mobile device,
+                                or beta test for iOS on
+                                <a href="${anon_url('https://testflight.apple.com/join/G29OmIm1')}" target="_blank" rel="noreferrer">TestFlight</a>.
+                                <br />
                             </p>
                             <p class="help-block">
                                 <span class="app-badge">
                                     <a href="${anon_url('https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote')}" target="_blank" rel="noreferrer"><img alt="Get it on Google Play" src="images/google-play-badge.svg" /></a>
                                 </span>
                                 <span class="app-badge">
+                                    <a href="${anon_url('https://testflight.apple.com/join/G29OmIm1')}" target="_blank" rel="noreferrer"><img alt="Download on TestFlight" src="images/testflight-badge.png" /></a>
+                                </span>
+                                <span class="app-badge">
                                     <small>Google Play and the Google Play logo are trademarks of Google LLC.</small>
+                                    <br>
+                                    <small>Apple and the Apple Logo are trademarks of Apple Inc.</small>
                                 </span>
                             </p>
                             <br style="clear: both">
