--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -122,6 +122,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4><i class="fa fa-television"></i> <span class="yaxis-text">Addition count</span> by media type <small>Last <span class="days">30</span> days</small></h4>
+                        <p class="help-block">
+                            The combined total of tv, movies, and music added to the server.
+                        </p>
+                        <div class="graphs-instance">
+                            <div class="watch-chart" id="graph_additions_by_media_type" style="float: left;">
+                                <div class="graphs-load">
+                                    <i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                </div>
+                                <br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="tabs-stream">
                 <div class="row">
@@ -306,6 +322,7 @@
 
     function getGraphColors(data_series) {
         var colors = {
+            'Shows': '#E5A00D',
             'TV': '#E5A00D',
             'Movies': '#FFFFFF',
             'Music': '#F06464',
@@ -321,6 +338,7 @@
         return series_colors;
     }
 </script>
+<script src="${http_root}js/graphs/additions_by_media_type.js${cache_param}"></script>
 <script src="${http_root}js/graphs/plays_by_day.js${cache_param}"></script>
 <script src="${http_root}js/graphs/plays_by_dayofweek.js${cache_param}"></script>
 <script src="${http_root}js/graphs/plays_by_hourofday.js${cache_param}"></script>
@@ -471,7 +489,7 @@
             $.ajax({
                 url: "get_plays_by_top_10_users",
                 type: 'get',
-                data: { time_range: time_range, y_axis: yaxis, user_id: selected_user_id  },
+                data: { time_range: time_range, y_axis: yaxis, user_id: selected_user_id },
                 dataType: "json",
                 success: function(data) {
                     if (yaxis === 'duration') { dataSecondsToHours(data); }
@@ -482,6 +500,19 @@
                 }
             });
 
+            $.ajax({
+                url: "get_additions_by_media_type",
+                type: 'get',
+                data: { time_range: time_range },
+                dataType: "json",
+                success: function(data) {
+                    hc_additions_by_media_type_options.xAxis.categories = data.categories;
+                    hc_additions_by_media_type_options.series = getGraphVisibility(hc_additions_by_media_type_options.chart.renderTo, data.series);
+                    hc_additions_by_media_type_options.colors = getGraphColors(data.series);
+                    var hc_additions_by_media_type = new Highcharts.Chart(hc_additions_by_media_type_options);
+                }
+            });
+            
             $('#nav-tabs-plays').tab('show');
         }
 
@@ -737,6 +768,7 @@
             hc_plays_by_source_resolution_options.yAxis.labels.formatter = yaxis_format;
             hc_plays_by_stream_resolution_options.yAxis.labels.formatter = yaxis_format;
             hc_plays_by_platform_by_stream_type_options.yAxis.labels.formatter = yaxis_format;
+            hc_additions_by_media_type_options.yAxis.labels.formatter = yaxis_format;
             hc_plays_by_user_by_stream_type_options.yAxis.labels.formatter = yaxis_format;
             hc_plays_by_month_options.yAxis.labels.formatter = yaxis_format;
 
@@ -744,6 +776,7 @@
             hc_plays_by_dayofweek_options.tooltip.formatter = tooltip_format;
             hc_plays_by_hourofday_options.tooltip.formatter = tooltip_format;
             hc_plays_by_platform_options.tooltip.formatter = tooltip_format;
+            hc_additions_by_media_type_options.tooltip.formatter = tooltip_format;
             hc_plays_by_user_options.tooltip.formatter = tooltip_format;
             hc_plays_by_stream_type_options.tooltip.formatter = tooltip_format;
             hc_plays_by_source_resolution_options.tooltip.formatter = tooltip_format;
