addition of seasons and episodes count

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -322,7 +322,9 @@
 
     function getGraphColors(data_series) {
         var colors = {
-            'Shows': '#E5A00D',
+            'Shows': '#669900',
+            'Seasons': '#99cc00',
+            'Episodes': '#cccc00',
             'TV': '#E5A00D',
             'Movies': '#FFFFFF',
             'Music': '#F06464',
