fix show count including tracks

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -322,9 +322,9 @@
 
     function getGraphColors(data_series) {
         var colors = {
-            'Shows': '#669900',
-            'Seasons': '#99cc00',
-            'Episodes': '#cccc00',
+            'Shows': '#ff3300',
+            'Seasons': '#ff6600',
+            'Episodes': '#ff9933',
             'TV': '#E5A00D',
             'Movies': '#FFFFFF',
             'Music': '#F06464',
