fixed highlighting of weekends

--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -660,7 +660,7 @@
                         // Highlight the weekend
                         if ((moment(day, 'YYYY-MM-DD').format('ddd') === 'Sat') ||
                             (moment(day, 'YYYY-MM-DD').format('ddd') === 'Sun')) {
-                            hc_plays_by_day_options.xAxis.plotBands.push({
+                            hc_additions_by_day_options.xAxis.plotBands.push({
                                 from: i-0.5,
                                 to: i+0.5,
                                 color: 'rgba(80,80,80,0.3)'
