--- a/data/interfaces/default/newsletter_config.html
+++ b/data/interfaces/default/newsletter_config.html
@@ -176,7 +176,7 @@
                                         <p class="help-block">
                                             Optional: Enter a unique ID name to create a static URL to the <em>last sent scheduled newsletter</em> at <span class="inline-pre">${http_root}newsletter/id/&lt;id_name&gt;</span>.
                                             Only letters (a-z), numbers (0-9), underscores (_) and hyphens (-) are allowed. Leave blank to disable.<br>
-                                            Note: Test newsletters are not considered as scheduled newsletters.
+                                            Note: Test newsletters are not considered scheduled newsletters.
                                         </p>
                                     </div>
                                     <div class="form-group">
